--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ description: Application for chatting on Match Day.
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: 0.7.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
