added cardview for login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/arena_allianz_austrailia.jpeg
+    - assets/soccer_field_dark.jpg
+    - assets/soccer_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
